spacing fixes after merge

--- a/app/(pages)/volunteer/page.module.scss
+++ b/app/(pages)/volunteer/page.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 160px 0;
 }
 
 .top {
@@ -43,6 +44,14 @@
 }
 
 // Middle Cards
+.middle {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  padding-top: 200px;
+  padding-bottom: 160px;
+}
+
 .volunteerCards {
   display: flex;
   flex-direction: column;
@@ -53,12 +62,6 @@
 .header {
   color: var(--dark-grey);
   text-align: center;
-}
-
-.middle {
-  display: flex;
-  flex-direction: column;
-  gap: 60px;
 }
 
 // Bottom Section
@@ -78,16 +81,8 @@
     align-items: center; /*primarily used for buttn to fit About Us text*/
     gap: 30px;
 
-    width: 644px;
-}
-
-.bottom_title{
+    width: 640px;
     text-align: center;
-}
-
-.text{
-    text-align: center;
-    align-self: stretch;
 }
 
 .about_us{
